CHANGELOG

2.1.2 - 2015-06-26
  * FIX : #113 support for attributes hightlightPreTag and hightlighPostTag
  * FIX : #112 distinct = undefined sent to the server
  * FIX : #110 helper.hasRefinements() now checks for numerics
  * FIX : #106 convert refinements to string
  * DOC : Update theme + fix (github.com/algolia/minami)
  * DOC : Fix misc links and descrition and added samples of objects
  * DOC : Added a cheat sheet in the generated documentation

2.1.1 - 2015-06-19
  * FIX : #107 Apply rules to distinct to prevent the API to return an error
  * FIX : make algoliasearch-helper requireable + browserifyable by removing the global envify transform

2.1.0 - 2015-06-15
  * FIX : #29 Avoid callback for outdated queries
  * FIX : #64 Sum up the processing time of all queries
  * FIX : #92 Parameters that can be set in the dashboard shouldn't have
  defaults
  * FIX : #62 Make sure disctinct is set to false when it's not possible to
  use distinct in Algolia
  * FEATURE : #91 Support for tags (with support for the raw format #98)
  * FEATURE : #70 Ability to get all refined values : helper.getRefinements(
  facetname )
  * FEATURE : #51 multiple filters for a single conjunctive facet (tests)
  * FEATURE : Ability to modify any parameter of the state easily (#76 #84 #12)
  * FEATURE : #69 Ability to know if a facet is refined, whatever the value
  * FEATURE : #86 Expose SearchParameters, AlgoliaSearchHelper, SearchResults to
  users directly in the builds
  * FEATURE : #25 let the user do a clearRefinement with a function as a filter
  * REFACTORING : SearchParameters is immutable (#14)
  * REFACTORING : Ensure SearchParameters is totally frozen (#14)
  * LIB : Update lodash version to 3.9.x

2.0.4
  * FIX : #82 Fix facet count on records with multiple values for a single
  facet
  * FEATURE: Add exhaustive attribute to a facet and removed useless timeout
  (#80)

2.0.3 - 2015-05-13
  * FIX : #72 add back the ability to do multiple disjunctive facetting on a